force-app/main/default/objects/ActivityHistory__c/ActivityHistory__c.object-meta.xml
<CustomObject>
    <label>活動履歴</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>NO</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>