force-app/main/default/objects/ActivityHistory__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>日付</label>
    <type>Date</type>
</CustomField>