force-app/main/default/objects/ActivityHistory__c/fields/CorporateName__c.field-meta.xml
<CustomField>
    <fullName>CorporateName__c</fullName>
    <label>社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>