force-app/main/default/objects/ActivityHistory__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>